versions/v0.12.x/embedded/cpp/client/load-index.mdx
---
title: "Load Index"
mode: "wide"
---

Loads an existing encrypted index and returns an instance of `EncryptedIndex`.

```cpp
std::unique_ptr<cyborg::EncryptedIndex> 
    LoadIndex(const std::string index_name,
              const std::array<uint8_t, 32>& index_key,
              const std::optional<size_t>& max_cache_size = 0,
              cyborg::Logger* logger = nullptr);
```

### Parameters

| Parameter | Type | Description |
|----------------|-------------------------------|-----------------------------------------------------|
| `index_name` | `std::string` | Name of the index to load. |
| `index_key` | `std::array<uint8_t, 32>` | 32-byte encryption key for the index, used to secure index data. |
| `max_cache_size` | `std::optional<size_t>` | _(Optional)_ Maximum size for the local cache in megabytes (default is `0`). |
| `logger` | [`cyborg::Logger*`](./logger) | _(Optional)_ Pointer to a logger instance for capturing operation logs (default is `nullptr`). |

### Returns

`std::unique_ptr<cyborg::EncryptedIndex>`: A pointer to the loaded index ([`EncryptedIndex`](../encrypted-index)).

### Exceptions

<AccordionGroup>
    <Accordion title="std::invalid_argument">
        - Throws if the index name does not exist.
    </Accordion>
    <Accordion title="std::runtime_exception">
        - Throws if the index could not be loaded or decrypted.
    </Accordion>
</AccordionGroup>

### Example Usage

```cpp
#include "cyborgdb_core/client.hpp"
#include "cyborgdb_core/encrypted_index.hpp"
#include "cyborgdb_core/logger.hpp"
#include <array>

// ... Initialize the client ...

// Create a secure 32-byte key (example: all zeros)
std::array<uint8_t, 32> index_key = {0};

// Optional: Create and configure a logger
cyborg::Logger logger;
logger.Configure(LogLevel::Debug, true, "index_loading.log");

auto index = client.LoadIndex("my_index", index_key, 1000, &logger);